header html structure

--- a/index.html
+++ b/index.html
@@ -8,12 +8,39 @@
   </head>
   <body>
     <header>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos itaque
-      consequuntur perspiciatis aut obcaecati nemo atque dignissimos dolores
-      vero officia quidem harum hic nam, incidunt et animi veritatis laborum
-      minima maxime, at aperiam optio quo possimus. Quisquam qui laudantium,
-      animi architecto nesciunt, quos optio tempore voluptate quidem
-      perspiciatis consectetur in.
+      <div class="company">
+        <svg
+          class="logo"
+          preserveAspectRatio="xMidYMid meet"
+          data-bbox="20.25 31.386 160 135.979"
+          viewBox="20.25 31.386 160 135.979"
+          xmlns="http://www.w3.org/2000/svg"
+          role="img"
+          aria-label="Homepage"
+          wixshapeid="84770f_7b3b36b4bad04ce6a72d030012b1f3a0.svg"
+        >
+          <g>
+            <path
+              d="M91.47 42.012L80.845 31.386 20.25 92.439v74.926h15.027V99.744l-.174-.085L91.47 42.012z"
+            ></path>
+            <path
+              d="M130.098 42.04l.028-.028L119.5 31.386 52.313 99.721l.022.023h-.022v67.621h99.159v-15.027l-.495-52.594h-.023l.023-.023-32.186-30.839-10.248 10.248 27.407 26.713v46.495H67.339V105.87l52.149-53.039 45.822 44.506-.175.085.088 69.943h15.027V92.439L130.098 42.04z"
+            ></path>
+          </g>
+        </svg>
+        <p>M&B Remodeling</p>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Work</a></li>
+          <li><a href="#">Contact</a></li>
+
+          <span>123-456-7890</span>
+        </ul>
+      </nav>
     </header>
     <main></main>
     <footer></footer>
