--- a/index.html
+++ b/index.html
@@ -42,7 +42,49 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="first">
+        <div class="overlay">
+          <h1>Exceptional Home Remodeling & Renovations</h1>
+          <button>Get A Free Estimate</button>
+        </div>
+      </section>
+      <section class="second">
+        <div class="background_image"></div>
+        <div class="short_info flex-center">
+          <div class="wrapper">
+            <h2 class="heading">The Leading Bay Area Remodeling Company</h2>
+            <p>
+              I'm a paragraph. Click here to add your own text and edit me. It’s
+              easy. Just click “Edit Text” or double click me to add your own
+              content and make changes to the font.
+            </p>
+            <a href="#">More About Us</a>
+          </div>
+        </div>
+      </section>
+      <section class="third">
+        <h2 class="heading">Why Choose Us</h2>
+        <div class="parent">
+          <div class="child">
+            <h3>Easy Financing</h3>
+            <p>I'm a paragraph. Click here to add your own text.</p>
+          </div>
+          <div class="child">
+            <h3>Free, At Home Consultations</h3>
+            <p>I'm a paragraph. Click here to add your own text.</p>
+          </div>
+          <div class="child">
+            <h3>Award Winning Service</h3>
+            <p>I'm a paragraph. Click here to add your own text.</p>
+          </div>
+          <div class="child">
+            <h3>Licensed & Insured</h3>
+            <p>I'm a paragraph. Click here to add your own text.</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
